<resources>
    <string name="app_name">FuckingLegym</string>
    <string name="running_title">刷跑步</string>
    <string name="activity_title">活动签到</string>
    <string name="course_title">课程签到</string>
    <string name="update_url">https://foreverddb.github.io/FuckLegym/msg.json</string>
    <string name="local_maps_path">local_maps</string>
    <string name="introduction_running">每次上传的跑步公里数：这是一个在一定范围之间的随机值。   单位：km</string>
    <string name="running_area">跑步地图</string>
    <string name="running_type">跑步类型</string>
    <string name="free_running">自由跑</string>
    <string name="point_running">定点跑</string>
    <string name="range_running">范围跑</string>
    <string name="import_clould_maps">导入云端地图</string>
    <string name="create_custom_maps">创建自定义路线</string>
    <string name="upload">上传</string>
    <string name="upload_running">刷跑步</string>
    <string name="option_running">跑步选项</string>
    <string name="running_distance_range">跑好远</string>
    <string name="please_login_first">请先返回去登录</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="import_success">导入成功！</string>
    <string name="login">登录</string>
    <string name="login_failed">登录失败</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="i_use_app_quietly">我会低调使用该软件</string>
    <string name="account_helper">登乐健的账号，一般是手机号</string>
    <string name="password_helper">乐健账号的密码</string>
    <string name="go_to_running">去跑步</string>
    <string name="semester_mileage">本学期里程</string>
    <string name="sign_activity">活动签到</string>
    <string name="sign_course">课程签到</string>
    <string name="cao_dan">该软件仅供开发者调试学习参考使用\n严禁用于违法违禁等不良行为；使用本程序所造成的一切后果由用户自行承担！</string>
    <string name="sign_out">注销登录</string>
    <string name="take_the_consequences_self">使用本程序所造成的一切后果由我自己承担</string>
    <string name="feedback">反馈</string>

</resources>