<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/driver1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:paddingEnd="15dp"
            tools:ignore="RtlSymmetry">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:text="@string/running_distance_range"
                android:textColor="?attr/colorPrimary" />

            <View
                android:alpha="0.5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:background="?attr/colorPrimaryInverse"
                tools:ignore="PrivateResource" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_running_introduction"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/introduction_running"
            app:layout_constraintTop_toBottomOf="@id/driver1" />


        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:valueFrom="0.0"
            android:valueTo="6.0"
            app:layout_constraintEnd_toStartOf="@id/text_slider_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_running_introduction" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_slider_value"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="false"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintBottom_toBottomOf="@id/rangeSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rangeSlider"
            app:layout_constraintTop_toTopOf="@id/rangeSlider"
            tools:text="从:1\n到:6" />

        <LinearLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rangeSlider"
            android:paddingVertical="20dp"
            android:id="@+id/layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:paddingEnd="15dp"
                tools:ignore="RtlSymmetry">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:text="@string/option_running"
                    android:textColor="?attr/colorPrimary" />

                <View
                    android:alpha="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="?attr/colorPrimaryInverse"
                    tools:ignore="PrivateResource" />

            </LinearLayout>

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_choose_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_map_24"
                app:title="@string/running_area" />

            <com.liangguo.preference.views.CommonSettingView
                android:id="@+id/setting_choose_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                app:icon="@drawable/ic_baseline_directions_run_24"
                app:layout_constraintTop_toBottomOf="@id/setting_choose_area"
                app:title="@string/running_type" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_upload"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="20dp"
                android:text="@string/upload"
                app:icon="@drawable/ic_baseline_cloud_upload_24" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>